source/formulaforce/main/objects/Team_Standing__c/Team_Standing__c.object-meta.xml
<CustomObject>
    <description>Team Standing in Constructors Championship after each F1 Grand Prix</description>
    <label>Team Standing</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Team Standing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Standings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>