source/formulaforce/main/objects/Team_Standing__c/fields/Championship_Points__c.field-meta.xml
<CustomField>
    <fullName>Championship_Points__c</fullName>
    <label>Championship Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>