source/formulaforce/main/objects/Team_Standing__c/fields/Data_Cloud_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Id__c</fullName>
    <externalId>true</externalId>
    <label>Data Cloud Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>