source/formulaforce/main/objects/Team_Standing__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Team Standings</relationshipLabel>
    <relationshipName>Team_Standings</relationshipName>
    <type>Lookup</type>
</CustomField>