source/formulaforce/main/objects/Team_Standing__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Team Standings</relationshipLabel>
    <relationshipName>Team_Standings</relationshipName>
    <type>Lookup</type>
</CustomField>