source/formulaforce/main/objects/Team_Standing__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <label>Wins</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>